--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class = "section about">
-        <h2>Prague International Microfestival 2016</h2>
+        <h2>Prague Microfestival 2016</h2>
         <p>The Prague Microfestival is an underground literary festival, bringing the best of the world’s experimental poetry and fiction to a Czech audience. From Friday 13 May to Sunday 15 May, fans of indie lit can experience a unique line-up of writers from Czechia, Ireland, Slovenia, Australia, France, Britain, Austria, Germany, Slovenia and more in Prague’s coolest underground venue, Vzorkovna, a block from the National Theatre on Národní třída. Friday night kicks off with the best in translocal fiction, Saturday showcases contemporary Slovenian poetry and Sunday features international performance art and experimental poetry.
         </p>
         <p>The three-day event begins at 18:30 daily with film screenings, courtesy of FAMU and Prague Film School, followed by author readings at 19:00 and live music from 22:00 continuing all  night. *All readings will be bilingual (English/Czech; Slovenian/English/Czech).
