--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class = "mainMenu">
       <div class="container">
         <menu>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Program</a></li>
+          <li><a href="javascript: void(0);" onclick="moveToPoint(1000)">About</a></li>
+          <li><a href="javascript: void(0);" onclick="moveToPoint(2500)">Program</a></li>
           <!--
             <li><a href="#">Authors</a></li>
           -->
-          <li><a href="#">Partners</a></li>
+          <li><a href="javascript: void(0);" onclick="moveToPoint(3600)">Partners</a></li>
         </menu>
       </div>
     </div>
