--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
 
         <p>
         <b>Directors</b>: Jaromír Lelek, David Vichnar, Aljaž Koprivnikar<br>
-        <b>Graphic Design</b>: Margarét Fehér<br>
+        <b>Graphic Design</b>: Margaréta Fehér<br>
         <b>Web</b>: Andrej Sýkora<br>
+        <b>Copywriting</b>: Lucia Szemetova<br>
         <b>VJ</b>: Elina Osipova<br>
         <b>Trailer</b>: The Slunk Films (Ozcar Burfitt, Lauri Saksa, Alessio Medas)<br>
         <b>Video Art Curator</b>: Ewelina Chiu<br>
@@ -161,10 +162,10 @@
                 </p>
                 <h5>writers:</h5>
                 <ul>
-                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="1">LOUIS ARMAND,</a></li>
-                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="2">THOR GARCIA,</a></li>
-                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="3">LOU ROWAN,</a></li>
-                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="4">MARKETA BANKOVA,</a></li>
+                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="1">LOUIS ARMAND</a></li>
+                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="2">THOR GARCIA</a></li>
+                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="3">LOU ROWAN</a></li>
+                  <li><a href="javascript: void(0);" class="switchAuthor" data-author="4">MARKETA BANKOVA</a></li>
                   <li><a href="javascript: void(0);" class="switchAuthor" data-author="5">PHIL SHOENFELT</a></li>
                 </ul>
             </div>
@@ -317,10 +318,10 @@ Prague, Erotika – Drogen und Sexualita, Apple Of The Eye, Morgana, Vlna a Vlak
               </p>
               <h5>writers:</h5>
               <ul>
-                <li><a href="javascript: void(0);" class="switchAuthor" data-author="1">KATJA GOREČAN,</a></li>
-                <li><a href="javascript: void(0);" class="switchAuthor" data-author="2">ANDREJ HOČEVAR,</a></li>
-                <li><a href="javascript: void(0);" class="switchAuthor" data-author="3">GREGOR PODLOGAR,</a></li>
-                <li><a href="javascript: void(0);" class="switchAuthor" data-author="4">BORIS A. NOVAK,</a></li>
+                <li><a href="javascript: void(0);" class="switchAuthor" data-author="1">KATJA GOREČAN</a></li>
+                <li><a href="javascript: void(0);" class="switchAuthor" data-author="2">ANDREJ HOČEVAR</a></li>
+                <li><a href="javascript: void(0);" class="switchAuthor" data-author="3">GREGOR PODLOGAR</a></li>
+                <li><a href="javascript: void(0);" class="switchAuthor" data-author="4">BORIS A. NOVAK</a></li>
                 <li><a href="javascript: void(0);" class="switchAuthor" data-author="5">ALENKA JENSTERLE DOLEŽAL</a></li>
               </ul>
             </div>
@@ -516,11 +517,11 @@ languages, among others in Czech, Slovak, Croatian, English, Polish and Hungaria
             </p>
             <h5>writers:</h5>
             <ul>
-              <li><a href="javascript: void(0);" class="switchAuthor" data-author="1">MAX HOFLER,</a></li>
-              <li><a href="javascript: void(0);" class="switchAuthor" data-author="2">MARK O'LEARY,</a></li>
-              <li><a href="javascript: void(0);" class="switchAuthor" data-author="3">SARAH HAYDEN,</a></li>
-              <li><a href="javascript: void(0);" class="switchAuthor" data-author="4">SEAN BONNEY,</a></li>
-              <li><a href="javascript: void(0);" class="switchAuthor" data-author="5">VINCENT FARNSWORTH,</a></li>
+              <li><a href="javascript: void(0);" class="switchAuthor" data-author="1">MAX HOFLER</a></li>
+              <li><a href="javascript: void(0);" class="switchAuthor" data-author="2">MARK O'LEARY</a></li>
+              <li><a href="javascript: void(0);" class="switchAuthor" data-author="3">SARAH HAYDEN</a></li>
+              <li><a href="javascript: void(0);" class="switchAuthor" data-author="4">SEAN BONNEY</a></li>
+              <li><a href="javascript: void(0);" class="switchAuthor" data-author="5">VINCENT FARNSWORTH</a></li>
               <li><a href="javascript: void(0);" class="switchAuthor" data-author="6">SOPHIE MALLERET</a></li>
             </ul>
             </div>
