--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="container">
         <menu>
           <li><a href="javascript: void(0);" onclick="moveToPoint(1000)">About</a></li>
-          <li><a href="javascript: void(0);" onclick="moveToPoint(2500)">Program</a></li>
+          <li><a href="javascript: void(0);" onclick="moveToPoint(2650)">Program</a></li>
           <!--
             <li><a href="#">Authors</a></li>
           -->
-          <li><a href="javascript: void(0);" onclick="moveToPoint(3600)">Partners</a></li>
+          <li><a href="javascript: void(0);" onclick="moveToPoint(3700)">Partners</a></li>
         </menu>
       </div>
     </div>
@@ -88,7 +88,10 @@
         <p>The festival is organised by Spolek pro Prahu literární - Literary Prague Association.</p>
         <p>Prague Microfestival 2016<br>
         13 – 15 May<br>
-        <strong>Vzorkovna, Narodni 11, Prague 1 – 110 00</strong></p>
+        <strong>Vzorkovna, Narodni 11, Prague 1 – 110 00</strong>
+        <br>
+        <a href="https://www.facebook.com/PrazskyMicrofestival/" target="_blank">Facebook</a>
+        </p>
 
         <p>
         <b>Directors</b>: Jaromír Lelek, David Vichnar, Aljaž Koprivnikar<br>
@@ -102,6 +105,7 @@
         </p>
 
         <p>
+        <b>Contact</b><br>praguemicrofestival@gmail.com<br>
         <b>Press contact</b><br>
         Eliška Černá<br>
         eliskacerna@gmail.com
