--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                     Národní 11
                     <br>
                     Prague 1<br><br>
-                    Start 6.30PM
+                    Start 6.30PM<br><br>
+                    Dress code: FANCY DRESS
                   </h3>
                 </div>
                 <h4>13th    ///   The Translocal Fiction Night</h4>
