--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </p>
         <p>“I’m incredibly excited about this unique event, which allows Czech art fans to enjoy a truly international line-up at Prague's very own Vzorkovna,” says Jaromír Lelek, Prague Microfestival’s director.
         </p>
-        <p>The eighth edition of the Prague Microfestival will also showcase a selection of new independent short films, visual arts, dance performances and more. The entirety of Vzorkovna, itself a cross-between a club, gallery, restaurant and labyrinth, will be filled with interactive bodypainting stalls, graffiti art, workshops, music and theatre improve, and a unique range of bookstalls offering hard-to-find indie book and magazine publications, and the latest titles from Literaria Pragensia, Equus Press, VLAK, and many others.
+        <p>The eighth edition of the Prague Microfestival will also showcase a selection of new independent short films, visual arts, dance performances and more. The entirety of Vzorkovna, itself a cross-between a club, gallery, restaurant and labyrinth, will be filled with interactive bodypainting stalls, graffiti art, workshops, music and theatre improvisation, and a unique range of bookstalls offering hard-to-find indie book and magazine publications, and the latest titles from Literaria Pragensia, Equus Press, VLAK, and many others.
         </p>
         <p>Free entry.</p>
         <p>The festival is organised by Spolek pro Prahu literární - Literary Prague Association.</p>
@@ -99,7 +99,7 @@
         <b>Directors</b>: Jaromír Lelek, David Vichnar, Aljaž Koprivnikar<br>
         <b>Graphic Design</b>: Margaréta Fehér<br>
         <b>Web</b>: Andrej Sýkora<br>
-        <b>Copywriting</b>: Lucia Szemetova<br>
+        <b>Copywriting</b>: Lucia Szemetová<br>
         <b>VJ</b>: Elina Osipova<br>
         <b>Trailer</b>: The Slunk Films (Ozcar Burfitt, Lauri Saksa, Alessio Medas)<br>
         <b>Video Art Curator</b>: Ewelina Chiu<br>
