--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <p>
         <b>Directors</b>: Jaromír Lelek, David Vichnar, Aljaž Koprivnikar<br>
         <b>Graphic Design</b>: Margaréta Fehér<br>
-        <b>Web</b>: Andrej Sýkora<br>
+        <b>Web</b>: <a href="http://andrejsykora.com">Andrej Sýkora</a><br>
         <b>Copywriting</b>: Lucia Szemetová<br>
-        <b>VJ</b>: Elina Osipova<br>
+        <b>Visual Artist</b>: Elina Osipova<br>
         <b>Trailer</b>: The Slunk Films (Ozcar Burfitt, Lauri Saksa, Alessio Medas)<br>
         <b>Video Art Curator</b>: Ewelina Chiu<br>
         <b>Volunteer Coordinator</b>: Aren Ock
@@ -223,7 +223,8 @@
 
                 became a bestseller in the Czech Republic and was awarded Magnesia Litera’s “Discovery of
 
-                the Year” prize.</p>
+                the Year” prize. On Friday she is going to present from her new book Maličkost, which is among the three finalist for Česká kniha award.
+                </p>
                 <p><a href = "javascript: void(0)" class="backToMain"><< back</a></p>
             </div>
             <div class = "author author-5">
