--- a/index.html
+++ b/index.html
@@ -702,6 +702,10 @@ Prague Microfestival and to see Prague again.</p>
         <img src = "/img/partners/institute.png">
         <img src = "/img/partners/KUD_LIBER.png">
 
+        <br>
+
+        <img src = "/img/partners/dfat.png">
+
       </div>
 
     </div>
